Fix truncated text showing through icons & last-modified bar
To accommodate for cached HTML a new class last-modified-bar__text
replaces last-modifier-tagline to help us distinguish between old
out dated HTML and the new HTML.

Bug: T232792
Bug: T232800

--- a/resources/skins.minerva.base.styles/ui.less
+++ b/resources/skins.minerva.base.styles/ui.less
@@ -62,7 +62,7 @@ main {
 	a:visited {
 		color: @colorGray5;
 		// If browser supports
-		&:nth-child( 2 ) {
+		&:nth-child( 1 ) {
 			font-weight: bold;
 		}
 	}
